[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyoedometer"
version = "0.1.0"
description = "Package to interpret and plot oedometer tests"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name="Thomas Ingeman-Nielsen", email="thin@dtu.dk" }
]
license = { text="GPL-3.0-or-later" }
keywords = ["oedometer test"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "jinja2",
  "matplotlib",
  "numpy",
  "openpyxl",
  "pandas",
  "tables",
  "PyYAML",
  "PyQT5",
]

# Uncomment and edit if you have non-Python package data to include:
# [tool.setuptools.package-data]
# "" = ["*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyoedometer*"]
exclude = ["tests*"]